Fixes vertical alignment of ip items list table

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -411,6 +411,10 @@ h4.page-header {
   text-align: center;
 }
 
+.v-align-middle {
+  vertical-align: middle !important;
+}
+
 .margin-top-20{
   margin-top: 20px;
 }
